# diffusion-privacy-attacks

./: README.md  pyproject.toml  requirements.txt  stable_diffusion_loader.py
scripts/: download_laion_subset.py  generate.py  prepare_laion_dataset.py  run_attack.py  run_attack_dp.py
src/: attack.py  clip_utils.py  compare_results.py  dataset.py  diffusion.py  evaluation.py  membership_eval.py  membership_inference.py  prepare_prompts.py  train_cifar_models.py  visualize.py
src/diffusion_privacy_attacks/: __init__.py  attack.py  clip_utils.py  clustering.py  dataset.py  diffusion.py  distance.py  evaluation.py  membership_eval.py  prepare_prompts.py  train_cifar_models.py  visualize.py
