[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-privacy-attacks"
version = "1.0.0"
description = "Extracting Training Data from Diffusion Models"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "diffusers>=0.20",
    "transformers>=4.30",
    "accelerate>=0.20",
    "open-clip-torch>=2.20",
    "Pillow>=9.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "faiss-cpu>=1.7"
]

[tool.setuptools.packages.find]
where = ["src"]
