[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-experiments"
version = "0.1.0"
description = "Project scaffold for diffusion model experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "diffusers",
  "numpy",
  "torchvision",
  "Pillow",
]

[tool.setuptools]
packages = ["utils"]
